--- a/src/app/academia/historial-pagos/historial-pagos.component.html
+++ b/src/app/academia/historial-pagos/historial-pagos.component.html
@@ -34,7 +34,7 @@
 
   
   <div class="row" *ngIf="misPagos.length == 0">
-    <div class="col center">
+    <div class="col center centerChrome">
       <mat-spinner color="accent"></mat-spinner>
     </div>
   </div>
