--- a/src/app/admin/create-contract/create-contract.component.html
+++ b/src/app/admin/create-contract/create-contract.component.html
@@ -226,7 +226,7 @@
     <hr/>
     
     <div class="row" *ngIf="bPensando == true">
-      <div class="col center">
+      <div class="col center centerChrome">
         <mat-spinner color="accent"></mat-spinner>
       </div>
     </div>
