--- a/src/app/admin/payments/dialog-modal-see-image.html
+++ b/src/app/admin/payments/dialog-modal-see-image.html
@@ -28,6 +28,8 @@
     <br/>ID del Usuario: {{ data.userId }}
     <br/>ID del archivo: {{ data.idFile }}
     <br/>ID del Pago: {{ data.id }}
+    <br/>
+    <u>Imagen cargada del pago (Pantallazo):</u>
   </p>
   <div mat-dialog-content>
     <div class="row justify-content-xs-center">
