--- a/src/app/admin/payments/payments.component.html
+++ b/src/app/admin/payments/payments.component.html
@@ -49,7 +49,7 @@
   </mat-card>
 
   <div class="row" *ngIf="dataSource.length == 0">
-    <div class="col center">
+    <div class="col center centerChrome">
       <mat-spinner color="accent"></mat-spinner>
     </div>
   </div>
