--- a/src/app/admin/toolbar-admin/toolbar-admin.component.html
+++ b/src/app/admin/toolbar-admin/toolbar-admin.component.html
@@ -36,7 +36,7 @@
     &nbsp;
     Cuentas: Crear nueva
   </button>
-  <button mat-menu-item>
+  <button mat-menu-item (click)="seeTradings()">
     <mat-icon>receipt</mat-icon>
     &nbsp;
     Movimientos: Ver
@@ -69,9 +69,15 @@
 </mat-menu>
 
 <mat-menu #reportTypes="matMenu">
-  <button mat-menu-item (click)="seeUser()">Ver Usuarios</button>
-  <button mat-menu-item>Por Cuenta</button>
-  <button mat-menu-item>Por Contrato</button>
+  <button mat-menu-item (click)="seeUser()">
+    Ver Usuarios
+  </button>
+  <button mat-menu-item (click)="reporteUser()">
+    Por Persona
+  </button>
+  <button mat-menu-item (click)="reporteTradings()">
+    Cuenta y Movimientos
+  </button>
   <button mat-menu-item (click)="payments()"><!-- [matMenuTriggerFor]="menuAdminPagos" -->
     Ver/Certificar Pagos
   </button>
