--- a/src/styles.css
+++ b/src/styles.css
@@ -14,9 +14,15 @@
 .center {
   text-align: center;
 }
+.centerChrome {
+  text-align: -webkit-center;
+}
 
 .rights {
   text-align: right;
+}
+.ends {
+  text-align: end;
 }
 
 .mat-app-background {
@@ -29,6 +35,11 @@
 .mat-fab-bottom-right {
   position: fixed !important;
   right: 15px;
+  bottom: 20px;
+}
+.mat-fab-bottom-left {
+  position: fixed !important;
+  left: 15px;
   bottom: 20px;
 }
 .mat-fab.mat-accent, .mat-flat-button.mat-accent, .mat-mini-fab.mat-accent, .mat-raised-button.mat-accent {
@@ -86,6 +97,9 @@ mat-card-subtitle.subtitle-actions {
   background-color: #428d39;
 }
 
+.sombras {
+  box-shadow: 0 5px 5px -3px rgba(0,0,0,.2), 0 8px 10px 1px rgba(0,0,0,.14), 0 3px 14px 2px rgba(0,0,0,.12) !important;
+}
 
 /*************************
  * Estilos generales del encabezado
@@ -232,6 +246,10 @@ mat-toolbar {
   color: #bbb;
 }
 
+.letrasRojasSobreNegro {
+  color: #f35e5e;
+}
+
 .mat-select-value {
   color: black;
 }
@@ -250,6 +268,13 @@ mat-toolbar {
   font-weight: 600;
 }
 
+.montoFecha2 {
+  color: #afadad;
+  font-family: monospace;
+  font-size: 14px;
+  font-weight: 500;
+}
+
 .font40 {
   font-size: 40px;
 }
@@ -257,6 +282,23 @@ mat-toolbar {
 .sideInfoMini {
   font-family: monospace;
   color: black;
+  font-size: 14px;
+}
+
+.reporte-cabecera {
+  font-family: monospace;
+  color: #428d39;
+  font-size: 14px;
+  font-weight: bolder;
+}
+.reporte-cabecera2 {
+  font-family: monospace;
+  color: black;
+  font-size: 12px;
+}
+.reporte-cabecera-totales1 {
+  font-family: monospace;
+  color: #fff;
   font-size: 14px;
 }
 
@@ -268,6 +310,11 @@ mat-toolbar {
 .bordeNota {
   margin: 20px;
 }
+
+.noMargins {
+  margin: 0px !important;
+}
+
 
 
 /********************
