--- a/src/app/admin/create-contract/create-contract.component.html
+++ b/src/app/admin/create-contract/create-contract.component.html
@@ -72,6 +72,7 @@
                   </ng-container>
                 </mat-select>
                 <mat-icon matSuffix>account_balance</mat-icon>
+                <!-- mat-hint *ngIf="accounts.length == 0" style="color: red;">El email no puede ser modificado. Es tu identificador único en nuestro Sistema.</mat-hint -->
               </mat-form-field>
             </div>
             
