--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -21,6 +21,9 @@
             Aquí puede ver todos los Usuarios registrados en el Sistema.
             Puede ACTIVARLOS o DESACTIVARLOS con el <b>switch de la derecha</b> 
             (los Usuarios No se eliminan del Sistema por razones administrativas y de Reportes).
+            <b style="color: red;">Atención:</b> cuando active a un Usuario (sea Inversionista o Estudiante)
+            se le enviará un <u>correo</u> a la cuenta e-mail que registró a su nombre con el fin de
+            notificarle que <b>ha sido Activado en el Sistema y que establezca una nueva Contraseña</b>.
           </span>
         </div>
       </div>
