--- a/src/app/admin/create-contract/dialog-modal-add-investor.html
+++ b/src/app/admin/create-contract/dialog-modal-add-investor.html
@@ -32,13 +32,16 @@
 
           <mat-select [(ngModel)]="inv_person" required [ngModelOptions]="{standalone: true}"><!-- el color de letra lo da la clase .mat-select-value -->
             <ng-container *ngFor="let u of data.users">
-              <mat-option *ngIf="u.status == data.activo && u.rol == data.adm && (u.contratoId == undefined || u.contratoId == null || u.contratoId == '')"
-               value="{{ u.id }}" (click)="selectedInvestor(u.id)">
-                Adm: {{ u.nombres }} {{ u.apellidos }}
-              </mat-option>
               <mat-option *ngIf="u.status == data.activo && u.rol == data.inv && (u.contratoId == undefined || u.contratoId == null || u.contratoId == '')"
                value="{{ u.id }}" (click)="selectedInvestor(u.id)">
                 {{ u.nombres }} {{ u.apellidos }}
+              </mat-option>
+            </ng-container>
+
+            <ng-container *ngFor="let u of data.users">
+              <mat-option *ngIf="u.status == data.activo && u.rol == data.adm && (u.contratoId == undefined || u.contratoId == null || u.contratoId == '')"
+                value="{{ u.id }}" (click)="selectedInvestor(u.id)">
+                Adm: {{ u.nombres }} {{ u.apellidos }}
               </mat-option>
             </ng-container>
           </mat-select>
