--- a/src/app/admin/create-user/create-user.component.html
+++ b/src/app/admin/create-user/create-user.component.html
@@ -119,14 +119,26 @@
           </div>
 
           <div class="col-sm-12 center">
-            <button mat-raised-button (click)="createNewUser()" color="accent"><b>Crear Usuario</b></button>
+            <button mat-raised-button (click)="createNewUser()" color="accent"
+             [disabled]="bProcesandoCreacion == true">
+              <b>
+                Crear Usuario
+              </b>
+            </button>
+            <div *ngIf="bProcesandoCreacion == true">
+              <mat-spinner color="accent"></mat-spinner>
+            </div>
           </div>
 
           <div class="col-sm-12 center">
             <br/>
             <a href (click)="$event.preventDefault();goHome();" class="href-red">Cancelar</a>
           </div>
-          
+
+          <div class="col-sm-12 center" *ngIf="bError == true">
+            {{ msgError }}
+          </div>
+            
         </div>
       </form>
       <br/><br/><br/>
