--- a/src/app/request-credentials/request-credentials.component.html
+++ b/src/app/request-credentials/request-credentials.component.html
@@ -146,7 +146,15 @@
         <div class="row justify-content-sm-center">
           <div class="col-sm-12 center">
             <br/>
-            <button mat-raised-button (click)="solicitarCuenta()" color="accent"><b>Solicitar cuenta en Profit Takers</b></button>
+            <button mat-raised-button (click)="solicitarCuenta()" color="accent" class="font14"
+             [disabled]="bProcesandoCreacion == true">
+              <b>
+                Solicitar cuenta en Profit Takers
+              </b>
+            </button>
+            <div *ngIf="bProcesandoCreacion == true">
+              <mat-spinner color="accent"></mat-spinner>
+            </div>
           </div>
         </div>
 
