canActivate y children paths

--- a/src/app/academia/toolbar/toolbar.component.html
+++ b/src/app/academia/toolbar/toolbar.component.html
@@ -5,7 +5,9 @@
       [matMenuTriggerFor]="menuAcademia">
       <mat-icon><!--more_vert-->menu</mat-icon>
     </button>
-    <span>Pepito Peérez</span>
+    <span>
+      {{ displayName }}
+    </span>
     <span class="toolbar-spacer"></span>
     <span><img src="assets/images/logo_negro.png" class="img-fluid toolbar-img-logo" /></span>
   </mat-toolbar-row>
