--- a/src/app/admin/toolbar-admin/toolbar-admin.component.html
+++ b/src/app/admin/toolbar-admin/toolbar-admin.component.html
@@ -4,7 +4,9 @@
       color="warn" [matMenuTriggerFor]="menuAdmin">
       <mat-icon><!--more_vert-->menu</mat-icon>
     </button>
-    <span>Admin Jimmy</span>
+    <span>
+      {{ displayName }}
+    </span>
     <span class="toolbar-spacer"></span>
     <span><img src="assets/images/logo_negro.png" class="img-fluid toolbar-img-logo" /></span>
   </mat-toolbar-row>
